added some style

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,6 +4,12 @@
  * work well for content-centric websites.
  */
 
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
+
+body {
+  font-family: 'Titillium Web', 'IBM Plex Sans Arabic', sans-serif;
+}
+
 /* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #021CFC;
@@ -36,10 +42,27 @@
 .menu__link{
   padding: 12px;
   border-radius: 12px;
+  font-size: 14px;
 }
 .menu__caret{
-  border-radius: 0px 12px 12px 0px;
+  border-radius: 99px 99px 99px 99px;
+  margin: 8px;
+  width: 32px;
+  height: 32px;
 }
 .cardContainer{
   /* border: 6px solid #000; */
+}
+
+.menu_SIkG{
+  padding: 16px;
+}
+.navbar--fixed-top{
+  display: none;
+}
+.menu__list .menu__list{
+  padding-left: 24px;
+}
+h1 h2 h3 h4{
+   font-family: 'Titillium Web', 'IBM Plex Sans Arabic', sans-serif;
 }
