--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -86,3 +86,17 @@ h1 h2 h3 h4{
   background-color: var(--ifm-space-footer);
   border-top: var(--s-border-footer) 1px solid;
 }
+img{
+  border-radius: 12px;
+  border: 4px solid #000;
+}
+h1{
+  border:4px #000 solid;
+  margin-bottom: 0px;
+  padding: 12px;
+  width: fit-content;
+  border-radius: 12px;
+}
+.hero{
+  
+}
