--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -91,12 +91,16 @@ img{
   border: 4px solid #000;
 }
 h1{
-  border:4px #000 solid;
+  /* border:4px #000 solid;
   margin-bottom: 0px;
   padding: 12px;
   width: fit-content;
-  border-radius: 12px;
+  border-radius: 12px; */
 }
 .hero{
   
+}
+
+table td{
+  width: 100%;
 }
