--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -86,7 +86,7 @@ h1 h2 h3 h4{
   background-color: var(--ifm-space-footer);
   border-top: var(--s-border-footer) 1px solid;
 }
-img{
+.img_ev3q{
   border-radius: 12px;
   border: 4px solid #000;
 }
