--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,7 +7,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
 
 body {
-  font-family: 'Titillium Web', 'IBM Plex Sans Arabic', sans-serif;
+  font-family: 'Titillium Web', 'IBM Plex Sans Arabic', sans-serif !important; 
 }
 
 /* You can override the default Infima variables here. */
@@ -52,6 +52,7 @@ body {
   border-radius: 12px;
   font-size: 14px;
   color: var(--ifm-space-text);
+  /* font-weight: bold; */
 
 }
 .menu__link--active{
@@ -79,9 +80,10 @@ body {
 .menu__list .menu__list{
   padding-left: 24px;
 }
-h1 h2 h3 h4{
+h1, h2, h3, h3, h5, h5{
    font-family: 'Titillium Web', 'IBM Plex Sans Arabic', sans-serif;
 }
+
 .footer{
   background-color: var(--ifm-space-footer);
   border-top: var(--s-border-footer) 1px solid;
@@ -100,7 +102,23 @@ h1{
 .hero{
   
 }
+.navbar__link{
+  font-weight: bold;
+}
 
 table td{
   width: 100%;
 }
+
+/* .cardContainer_fWXF
+{
+  box-shadow: none !important;
+  border: 4px solid #000 !important;
+}
+.cardContainer_fWXF:hover
+{
+  box-shadow: none !important;
+  border: 4px solid #000 !important;
+  background-color: #000;
+  color:#000
+} */
