--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -21,3 +21,47 @@
   align-items: center;
   justify-content: center;
 }
+
+.herobtncard{
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+  border-radius: 12px;
+  border: 4px solid #000;
+  background-color: red;
+}
+.comWrapper{
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.con{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 90vh;
+  align-items: ltr;
+  max-width: 1200px;
+  gap: 32px
+}
+
+.heroLogo{
+  width: 512px;
+}
+.heroSection{
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.heroText{
+  display: flex;
+  flex-direction: row;
+  gap: 8px
+}
+.switchText{
+  color:#022be0
+}
