--- a/src/components/HomepageCard/styles.module.css
+++ b/src/components/HomepageCard/styles.module.css
@@ -11,34 +11,32 @@
 }
 
 .homecardbg{
-  background-color: #000;
-  border: 8px solid #000;
+  background-color: var(--s-neutral-100);
+  border: 8px solid var(--s-neutral-100);
   display: flex;
   flex-direction: row;
   border-radius: 16px;
   overflow: hidden;
   gap: 8px;
-  width: 1200px;
+  width: 100%;
   height: fit-content;
 }
 @media only screen and (max-width: 920px) {
   .homecardbg {
    flex-direction: column;
-   width: 100%;
-   border-radius: 0px;
   }
 }
 .card{
-  color: hsl(0, 0%, 0%);
+  color: var(--s-neutral-100);
   display: flex;
   flex-grow: 1;
   padding: 16px;
-  background-color: #fff;
+  background-color: var(--s-neutral-0);
  
 }
 .card:hover{
-  background-color: #000;
-  color: #fff;
+  background-color: var(--s-bg-dark);
+  color: var(--s-neutral-0);
 
 }
 
@@ -54,4 +52,7 @@ a{
 a:hover{
   color:inherit;
   text-decoration: none;
+}
+.navbarHideable{
+  display: none !important;
 }
