Added Deign,Whats yoko

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -129,3 +129,12 @@ table th{
  /* .navbar--fixed-top{
   display: none;
  } */
+
+.btn-secondary{
+background-color: #000;
+color:#fff
+ }
+ .btn-secondary:hover{
+background-color: #363636;
+color:#fff
+ }
